--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.idea/*
+
+.idea/.gitignore
+.idea/04-gif-expert-app.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
